--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,16 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+	  	"laracasts/commander": "~1.0",
+		"laracasts/validation": "1.1.*",
+	  	"laracasts/flash": "~1.0"
+
+	},
+  	"require-dev": {
+	  "way/generators": "~2.0",
+	  "codeception/codeception": "~2.0",
+	  "laracasts/testdummy": "~1.0"
 	},
 	"autoload": {
 		"classmap": [
@@ -14,7 +23,10 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
-		]
+		],
+	  "psr-4": {
+		"seniorproject\\": "app/seniorproject"
+	  }
 	},
 	"scripts": {
 		"post-install-cmd": [
